--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ config/dev.yml
 config/private.yml
 dev_releases
 releases/*.tgz
+ci/credentials.yml
+releases/**/*.tgz
+.DS_Store
+*.swp
+*~
+*#
+#*
