--- a/config/final.yml
+++ b/config/final.yml
@@ -10,4 +10,4 @@ final_name: dummy
 blobstore:
   provider: s3
   options:
-    bucket_name: dummy-release-blobs
+    bucket_name: bosh-softlayer-cpi-blobs2
